--- a/cloud-functions/export_persoane_bucket/cloudbuild.yaml
+++ b/cloud-functions/export_persoane_bucket/cloudbuild.yaml
@@ -6,7 +6,7 @@ steps:
     args:
       - functions
       - deploy
-      - obtine_documente
+      - exporta_persoane
       - --gen2
       - --runtime=python312
       - --region=europe-west1
