--- a/cloud-functions/obtine_documente/cloudbuild.yaml
+++ b/cloud-functions/obtine_documente/cloudbuild.yaml
@@ -2,6 +2,12 @@ options:
   logging: CLOUD_LOGGING_ONLY
 
 steps:
+  # CI: Instalează dependințele definite în requirements.txt
+  - name: 'python'
+    entrypoint: pip
+    args: ['install', '-r', 'cloud-functions/obtine_documente/requirements.txt']
+
+steps:
   - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
     entrypoint: 'gcloud'
     args:
