--- a/cloud-functions/export_persoane_bucket/cloudbuild.yaml
+++ b/cloud-functions/export_persoane_bucket/cloudbuild.yaml
@@ -1,6 +1,10 @@
 options:
   logging: CLOUD_LOGGING_ONLY
 steps:
+  - name: 'python'
+    entrypoint: pip
+    args: ['install', '-r', 'cloud-functions/export_persoane_bucket/requirements.txt']
+steps:
   - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
     entrypoint: 'gcloud'
     args:
